--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -1,12 +1,16 @@
 spring:
     profiles:
-        active: local
+        active: dev
+    datasource:
+        url: http://default
+        username: default
+        password: defaultPwd
+        driverClassName: com.mysql.jdbc.Driver
 server:
     port: 8088
     servlet:
         context-path: /api
 
-mysql_user: root
-mysql_password: password
+    
 
 
